--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,13 @@
     --color-white: rgb(255, 255, 255);
 
     --text-color-second: rgb(68, 68, 68);
-    --text-color-third: rgb(30, 159, 171);
+    --text-color-third: #bdb2dc;
 
     --first-color: rgb(110, 87, 224);
     --first-color-hover: rgb(40, 91, 212);
 
     --second-color: rgb(0, 201, 255);
-    --third-color: rgb(192, 166, 49);
+    --third-color: #f47737;
     --first-shadow-color: rgba(0, 0, 0, 0.1);
 
 }
